# KeyForge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  backend_test.py  docker-compose.yml  requirements.txt  test_result.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  models.py  models_audit.py  models_backup.py  models_envelope.py  models_extended.py  models_field_encryption.py  models_kms.py  models_lifecycle.py  models_policy.py  models_proxy.py  models_teams.py  requirements.txt  scanners.py  server.py
backend/audit/: __init__.py  integrity.py
backend/backup/: __init__.py  manager.py
backend/encryption/: __init__.py  envelope.py  field_encryption.py  kms.py
backend/issuers/: __init__.py  aws.py  base.py  github.py  registry.py  trust_policy_template.py
backend/routes/: audit.py  (+20 more)
docs/: aws-setup.md  operator-setup.md
e2e/: package-lock.json  package.json  playwright.config.js
experimental/: README.md
frontend/: .env  nginx.conf
integrations/git-hooks/: .pre-commit-hooks.yaml  pyproject.toml  setup.py
integrations/git-hooks/keyforge_hooks/: __init__.py  cli.py  scanner.py
tasks/: lessons.md  todo.md
tests/: _test_helpers.py  conftest.py  test_api_health.py  test_auto_rotation.py  test_issuer_aws.py  test_issuer_github.py  test_issuers_interface.py  test_models.py  test_models_credential.py  test_patterns.py  test_routes_auth.py  test_routes_credentials.py  test_routes_dashboard.py  test_scanners.py  test_security.py  test_validators.py  test_walkthroughs.py
tools/: cli.py
(+73 files in other folders)
