[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyforge-git-hooks"
version = "0.1.0"
description = "KeyForge pre-commit hook — scan staged files for hardcoded secrets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "KeyForge Team", email = "team@keyforge.dev"},
]
keywords = ["security", "secrets", "pre-commit", "git", "hooks", "scanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/keyforge/keyforge-git-hooks"
Documentation = "https://keyforge.dev/docs/git-hooks"
Repository = "https://github.com/keyforge/keyforge-git-hooks"
Issues = "https://github.com/keyforge/keyforge-git-hooks/issues"

[project.scripts]
keyforge-scan = "keyforge_hooks.cli:cli_entry"

[tool.setuptools.packages.find]
include = ["keyforge_hooks*"]
